--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #062140;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1, h2, h3, h4, p {
+  color: #FFFCF3;
 }
+
+a {
+  text-decoration: none;
+}
+
+/* 
+pink: #FF7373
+light-blue: #034077
+grey-blue: #889CB2
+grey-red: #988D99
+*/
