--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -12,3 +12,15 @@
     font-size: 1.2rem;
     color: #889CB2;
 }
+
+.latest-title {
+    margin: 2rem 0 0;
+    color: #988D99;
+    font-size: 0.9rem;
+    font-style: italic;
+}
+
+.loading {
+    text-align: center;
+    margin-top: 5rem;
+}
