--- a/src/components/AllPosts.css
+++ b/src/components/AllPosts.css
@@ -1,6 +1,10 @@
 .posts-wrapper {
-    width: 80%;
+    width: 70%;
     margin: 4rem auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
 
 .post-img {
@@ -10,4 +14,5 @@
 
 .post-card {
     width: 20rem;
+    margin-bottom: 4rem;
 }
