--- a/src/components/AllPosts.css
+++ b/src/components/AllPosts.css
@@ -1,24 +1,28 @@
 .posts-wrapper {
     width: 68%;
-    margin: 4rem auto;
+    margin: 2rem auto;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-.post-img {
+/* .post-img {
     width: 20rem;
     border-radius: 6px;
-}
+} */
 
 .post-card {
-    width: 20rem;
-    margin-bottom: 4rem;
+    border-radius: 6px;
+    width: 40rem;
+    /* margin-bottom: 2rem; */
     transition: 0.3s;
+    padding: 0.5rem 1rem;
     /* animation: down-bump 0.3s ease; */
 }
 
 .post-card:hover {
     transition: 0.3s;
-    transform: scale(1.02);
+    transform: scale(1.01);
+    background-color: rgba(3, 65, 119, 0.3);
 }
