--- a/src/components/AllPosts.css
+++ b/src/components/AllPosts.css
@@ -1,16 +1,31 @@
 .posts-wrapper {
     width: 68%;
+    height: 30rem;
     margin: 2rem auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    /* display: flex; */
+    /* flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around; */
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
 }
 
 /* .post-img {
     width: 20rem;
     border-radius: 6px;
 } */
+
+.post-card h3 {
+    margin: 0.5rem 0;
+}
 
 .post-card {
     border-radius: 6px;
