--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -2,6 +2,10 @@
     margin-left: 20rem;
 }
 
+.projects-wrapper {
+    margin-left: 30rem;
+}
+
 .home-wrapper {
     margin-top: 3rem;
     margin-left: 33rem;
