--- a/src/components/allprojects/AllProjects.css
+++ b/src/components/allprojects/AllProjects.css
@@ -44,3 +44,18 @@
     transform: scale(1.01);
     background-color: rgba(3, 65, 119, 0.3);
 }
+
+
+@media only screen and (max-width: 900px) {    
+    .project-image-wrapper {
+        display: none;
+    }
+
+    .allprojects-wrapper {
+        width: 60%;
+        height: 30rem;
+        margin: 2rem 0 2rem 10rem;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+}
