--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -43,7 +43,6 @@ input, textarea, .send {
     border: none;
     border: 2px solid #988D99;
     padding: 0.2rem 0.5rem;
-    /* background-color: #034077; */
     background-color: transparent;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -112,4 +111,30 @@ textarea {
     color: #FF7373;
     transition: 0.3s;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 1300px) {
+    .home-wrapper {
+        margin: 2rem auto 0 auto;
+        width: 60%;
+    }
+
+    .blog-wrapper {
+        margin-left: 0;
+    }
+
+    .contact-wrapper {
+        margin-top: 3rem;
+        margin-left: 5rem;
+        flex-direction: column;
+    }
+    
+    form {
+        padding-right: 5rem;
+    }
+
+    .column-2 {
+        margin-left: 0;
+        margin-top: 2rem;
+    }
 }
